non-msrv-tests/tests/ui/not-zeroize/comma.stderr
error: unsupported trait syntax, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd
 --> tests/ui/not-zeroize/comma.rs:2:22
  |
2 | #[derive_where(Clone,,)]
  |                      ^
